--- a/tensorflow_intro.ipynb
+++ b/tensorflow_intro.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "tensorflow-intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSNa87QR4hh5d+vg0PMIrR",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNS3wv1Kl/sZKPZ2btBDSuT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +44,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 134
         },
-        "outputId": "c8d5a694-90b5-4ec0-dabb-1d5c47d741a7"
+        "outputId": "3e4e30c8-b8a5-4fcf-e58c-72c3d026d8e1"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -51,20 +52,26 @@
         "\n",
         "tensor_int = tf.Variable(100)\n",
         "print(tensor_int)\n",
+        "\n",
         "tensor_int2 = tf.Variable(200, dtype=tf.int64)\n",
         "print(tensor_int2)\n",
+        "\n",
         "tensor_int3 = tf.Variable(300, tf.int16)\n",
         "print(tensor_int3)\n",
+        "\n",
         "tensor2 = tf.Variable(15.0)\n",
         "print(tensor2)\n",
+        "\n",
         "tensor3 = tf.Variable(25.0, dtype=tf.float16)\n",
         "print(tensor3)\n",
+        "\n",
         "tensor4 = tf.Variable(35.00000000000001, dtype=tf.float64)\n",
         "print(tensor4)\n",
+        "\n",
         "tensor_string = tf.Variable(\"hello\", dtype=tf.string)\n",
-        "print(tensor_string)"
+        "print(tensor_string)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,6 +83,191 @@
             "<tf.Variable 'Variable:0' shape=() dtype=float16, numpy=25.0>\n",
             "<tf.Variable 'Variable:0' shape=() dtype=float64, numpy=35.00000000000001>\n",
             "<tf.Variable 'Variable:0' shape=() dtype=string, numpy=b'hello'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ly8ySIcjW7Cd",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Rank/Degree of a Tensor**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "### Defines number of dimensions involved in the tensor\n",
+        "```\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oPEU0InxW_Dl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "e4dccabf-b4cf-4ad3-e859-ac2a64aff52e"
+      },
+      "source": [
+        "tensor1 = tf.Variable([1])\n",
+        "print(tf.rank(tensor1))\n",
+        "\n",
+        "tensor2 = tf.Variable([1,2,3])\n",
+        "print(tf.rank(tensor2))\n",
+        "\n",
+        "tensor3 = tf.Variable([[1],\n",
+        "                       [2],\n",
+        "                       [3]])\n",
+        "print(tf.rank(tensor3))\n",
+        "\n",
+        "tensor4 = tf.Variable([[1,1],\n",
+        "                       [2,2],\n",
+        "                       [3,3]])\n",
+        "print(tf.rank(tensor4))\n",
+        "\n",
+        "tensor5 = tf.Variable([\n",
+        "                       [[3,3],[1,1]],\n",
+        "                       [[1,1],[2,2]],\n",
+        "                       [[2,2],[3,3]]\n",
+        "                       ])\n",
+        "print(tf.rank(tensor5))\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(1, shape=(), dtype=int32)\n",
+            "tf.Tensor(1, shape=(), dtype=int32)\n",
+            "tf.Tensor(2, shape=(), dtype=int32)\n",
+            "tf.Tensor(2, shape=(), dtype=int32)\n",
+            "tf.Tensor(3, shape=(), dtype=int32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ESiu-2mNbJHE",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Shape of Tensors**\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "### number of elements exists in each dimension(rank)\n",
+        "```\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rArw9NHuceOe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "8962983f-43e2-4385-abe1-d40877ae0b75"
+      },
+      "source": [
+        "#lets find out shape for above tensors\n",
+        "\n",
+        "print(tensor1.shape)\n",
+        "print(tensor2.shape)\n",
+        "print(tensor3.shape)\n",
+        "print(tensor4.shape)\n",
+        "print(tensor5.shape)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(1,)\n",
+            "(3,)\n",
+            "(3, 1)\n",
+            "(3, 2)\n",
+            "(3, 2, 2)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hwKuxeDEg_GQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Changing Shape of a Tensor**\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# Number of elements of a tensor is the product of sizes of all shapes, so tensor5.shape = (3,2,2). \n",
+        "So the number of elements of this tensor are 12. \n",
+        "\n",
+        "```\n",
+        "\n",
+        "Below examples are to demonstrate reshaping of tensors\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kqs7fdy3h1wP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 252
+        },
+        "outputId": "5f5cdcb0-9c2d-4447-976a-977f7cf5bea4"
+      },
+      "source": [
+        "#create a tensor with shape(1,2,3) with all ones\n",
+        "tensor1 = tf.ones((1,2,3))\n",
+        "print(\"TENSOR 1 shape is {1} \\n {0}\\n \".format(tensor1, tensor1.shape))\n",
+        "\n",
+        "#reshape abover tensor with shape(3,2,1)\n",
+        "tensor2= tf.reshape(tensor1, (3,2,1))\n",
+        "print(\"TENSOR 2 shape is {1} \\n {0}\\n \".format(tensor2, tensor2.shape))\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TENSOR 1 shape is (1, 2, 3) \n",
+            " [[[1. 1. 1.]\n",
+            "  [1. 1. 1.]]]\n",
+            " \n",
+            "TENSOR 2 shape is (3, 2, 1) \n",
+            " [[[1.]\n",
+            "  [1.]]\n",
+            "\n",
+            " [[1.]\n",
+            "  [1.]]\n",
+            "\n",
+            " [[1.]\n",
+            "  [1.]]]\n",
+            " \n"
           ],
           "name": "stdout"
         }
