--- a/tensorflow_intro.ipynb
+++ b/tensorflow_intro.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow-intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNS3wv1Kl/sZKPZ2btBDSuT",
+      "authorship_tag": "ABX9TyPebwHdlZA4OBYDfXyRlmZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +40,11 @@
       "metadata": {
         "id": "M7V9IKpmIfou",
         "colab_type": "code",
+        "outputId": "ae8357bf-c48e-4467-b86b-629232f746dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "3e4e30c8-b8a5-4fcf-e58c-72c3d026d8e1"
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -71,7 +71,7 @@
         "tensor_string = tf.Variable(\"hello\", dtype=tf.string)\n",
         "print(tensor_string)\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,6 +102,8 @@
         "\n",
         "```\n",
         "### Defines number of dimensions involved in the tensor\n",
+        "\n",
+        "Rank is also known as Degree, order, ndims\n",
         "```\n",
         "\n",
         "\n"
@@ -112,11 +114,11 @@
       "metadata": {
         "id": "oPEU0InxW_Dl",
         "colab_type": "code",
+        "outputId": "a0a7cae8-1867-40df-b0ec-afa1c21c8828",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "e4dccabf-b4cf-4ad3-e859-ac2a64aff52e"
+        }
       },
       "source": [
         "tensor1 = tf.Variable([1])\n",
@@ -142,7 +144,7 @@
         "                       ])\n",
         "print(tf.rank(tensor5))\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,11 +181,11 @@
       "metadata": {
         "id": "rArw9NHuceOe",
         "colab_type": "code",
+        "outputId": "2f6ca600-99c2-40ca-edb4-95d7b129a7a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "8962983f-43e2-4385-abe1-d40877ae0b75"
+        }
       },
       "source": [
         "#lets find out shape for above tensors\n",
@@ -194,7 +196,7 @@
         "print(tensor4.shape)\n",
         "print(tensor5.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,22 +236,26 @@
       "metadata": {
         "id": "Kqs7fdy3h1wP",
         "colab_type": "code",
+        "outputId": "d64a7212-5ec8-41a3-bdbb-962fe96cf91d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 252
-        },
-        "outputId": "5f5cdcb0-9c2d-4447-976a-977f7cf5bea4"
+          "height": 336
+        }
       },
       "source": [
-        "#create a tensor with shape(1,2,3) with all ones\n",
-        "tensor1 = tf.ones((1,2,3))\n",
+        "#create a tensor with shape(1,2,3) with all ones, either of this are same (1,2,3) or [1,2,3]\n",
+        "tensor1 = tf.ones([1,2,3])\n",
         "print(\"TENSOR 1 shape is {1} \\n {0}\\n \".format(tensor1, tensor1.shape))\n",
         "\n",
         "#reshape abover tensor with shape(3,2,1)\n",
         "tensor2= tf.reshape(tensor1, (3,2,1))\n",
-        "print(\"TENSOR 2 shape is {1} \\n {0}\\n \".format(tensor2, tensor2.shape))\n"
+        "print(\"TENSOR 2 shape is {1} \\n {0}\\n \".format(tensor2, tensor2.shape))\n",
+        "\n",
+        "#reshaping in a different way, -1 indicates tensorflow will calculate the size of the dimension by itself with 3. \n",
+        "tensor3 = tf.reshape(tensor1,(3,-1))\n",
+        "print(\"TENSOR 3 shape is {1} \\n {0}\\n \".format(tensor3, tensor3.shape))\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +273,57 @@
             "\n",
             " [[1.]\n",
             "  [1.]]]\n",
+            " \n",
+            "TENSOR 3 shape is (3, 2) \n",
+            " [[1. 1.]\n",
+            " [1. 1.]\n",
+            " [1. 1.]]\n",
             " \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bvW-TZMJVUQX",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Slicing tensors**\n",
+        "\n",
+        "This is similar to slicing in python"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MMzBkWFpVfWE",
+        "colab_type": "code",
+        "outputId": "77bf5174-028b-41dc-dd33-806000acae88",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "list_2d = [[1,2,3,4],\n",
+        "             [5,6,7,8],\n",
+        "             [9,10,11,12]\n",
+        "]\n",
+        "tensor_2d = tf.Variable(list_2d)\n",
+        "\n",
+        "print(tensor_2d.shape)\n",
+        "print(tf.rank(tensor_2d))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3, 4)\n",
+            "tf.Tensor(2, shape=(), dtype=int32)\n"
           ],
           "name": "stdout"
         }
