--- a/refactoring_example.ipynb
+++ b/refactoring_example.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "refactoring-example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFiM4bES3sIob3+KF/NTo5",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMUf0PeOPbc9Ng7CmJFqI+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,11 +45,11 @@
       "metadata": {
         "id": "xPcqvKReDihB",
         "colab_type": "code",
+        "outputId": "c848ebb2-b1e5-421b-a67c-a436355528ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 151
-        },
-        "outputId": "fb2a01a7-dc4c-441a-ab2f-b3d29fa4fbfb"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -56,7 +57,7 @@
         "\n",
         "print(df.head())"
       ],
-      "execution_count": 1,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,11 +90,11 @@
       "metadata": {
         "id": "_4kEtl9yErmH",
         "colab_type": "code",
+        "outputId": "e3f89d2d-a10b-4e17-9aa1-7b7e03b8919d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "99442a01-edcc-4265-ee15-75183b60fac3"
+        }
       },
       "source": [
         "new_df = df.rename(columns={\n",
@@ -107,13 +108,13 @@
         "\n",
         "print(new_df.columns)"
       ],
-      "execution_count": 6,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Index(['fixed-acidity', 'volatile-acidity', 'citric-acid', 'residual-sugar',\n",
-            "       'chlorides', 'free-sulfur-dioxide', 'total-sulfur-dioxide', 'density',\n",
+            "Index(['fixed_acidity', 'volatile_acidity', 'citric_acid', 'residual_sugar',\n",
+            "       'chlorides', 'free_sulfur_dioxide', 'total_sulfur_dioxide', 'density',\n",
             "       'pH', 'sulphates', 'alcohol', 'quality'],\n",
             "      dtype='object')\n"
           ],
@@ -136,33 +137,32 @@
       "metadata": {
         "id": "KIXzKymPFRIG",
         "colab_type": "code",
+        "outputId": "3af703e6-2414-4e80-e93b-8bcab8eb78f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
-        },
-        "outputId": "6f52418b-1bc1-4c96-b0bf-3d8ff2dbc834"
+          "height": 84
+        }
       },
       "source": [
         "labels = list(df.columns)\n",
-        "labels[0] = labels[0].replace(\" \", \"-\")\n",
-        "labels[1] = labels[1].replace(\" \", \"-\")\n",
-        "labels[2] = labels[2].replace(\" \", \"-\")\n",
-        "labels[3] = labels[3].replace(\" \", \"-\")\n",
-        "labels[4] = labels[4].replace(\" \", \"-\")\n",
-        "labels[5] = labels[5].replace(\" \", \"-\")\n",
-        "labels[6] = labels[6].replace(\" \", \"-\")\n",
+        "labels[0] = labels[0].replace(\" \", \"_\")\n",
+        "labels[1] = labels[1].replace(\" \", \"_\")\n",
+        "labels[2] = labels[2].replace(\" \", \"_\")\n",
+        "labels[3] = labels[3].replace(\" \", \"_\")\n",
+        "labels[4] = labels[4].replace(\" \", \"_\")\n",
+        "labels[5] = labels[5].replace(\" \", \"_\")\n",
+        "labels[6] = labels[6].replace(\" \", \"_\")\n",
         "df.columns = labels\n",
         "\n",
         "print(df.columns)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol', 'quality']\n",
-            "Index(['fixed-acidity', 'volatile-acidity', 'citric-acid', 'residual-sugar',\n",
-            "       'chlorides', 'free-sulfur-dioxide', 'total-sulfur-dioxide', 'density',\n",
+            "Index(['fixed_acidity', 'volatile_acidity', 'citric_acid', 'residual_sugar',\n",
+            "       'chlorides', 'free_sulfur_dioxide', 'total_sulfur_dioxide', 'density',\n",
             "       'pH', 'sulphates', 'alcohol', 'quality'],\n",
             "      dtype='object')\n"
           ],
@@ -185,30 +185,136 @@
       "metadata": {
         "id": "k5li8JKMHfyN",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "9f22ed44-8564-4731-a64e-59f70a91b423"
+        "colab": {}
       },
       "source": [
+        "'''\n",
         "labels = list(df.columns)\n",
         "\n",
         "for i in range(len(labels)):\n",
-        "    labels[i] = labels[i].replace(\" \", \"-\")\n",
+        "    labels[i] = labels[i].replace(\" \", \"_\")\n",
         "\n",
-        "df.columns = labels   \n"
+        "df.columns = labels\n",
+        "print(df.columns)   \n",
+        "'''\n",
+        "df.columns = [label.replace(\" \", \"_\") for label in df.columns]"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NKeflYpa681i",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Analysing features**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xNfDR2ADJL1t",
+        "colab_type": "code",
+        "outputId": "42ea322f-be33-45ec-86ae-0bb31f0aa611",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "median_alcohol = df.alcohol.median()\n",
+        "for i, alcohol in enumerate(df.alcohol):\n",
+        "    if alcohol >= median_alcohol:\n",
+        "        df.loc[i, 'alcohol'] = \"high\"\n",
+        "    else:\n",
+        "        df.loc[i, 'alcohol'] = \"low\"    \n",
+        "\n",
+        "df.groupby('alcohol').quality.mean()"
+      ],
+      "execution_count": 79,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "['fixed-acidity', 'volatile-acidity', 'citric-acid', 'residual-sugar', 'chlorides', 'free-sulfur-dioxide', 'total-sulfur-dioxide', 'density', 'pH', 'sulphates', 'alcohol', 'quality']\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "alcohol\n",
+              "high    5.958904\n",
+              "low     5.310302\n",
+              "Name: quality, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 79
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tadga0j993iI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "69021887-25f9-4895-c5ac-17f806a03b35"
+      },
+      "source": [
+        "median_pH = df.pH.median()\n",
+        "for i, pH in enumerate(df.pH):\n",
+        "    if pH >= median_pH:\n",
+        "        df.loc[i, 'pH'] = 'high'\n",
+        "    else:\n",
+        "        df.loc[i, 'pH'] = 'low'\n",
+        "df.groupby('pH').quality.mean()"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pH\n",
+              "high    5.598039\n",
+              "low     5.675607\n",
+              "Name: quality, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U0hO-Cc-988n",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Finding out `mean` for each feature is getting repetitive. So now lets make it modular so that it can be used to calculate mean by just passing feature as an argument.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xFOFizsE-kRe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def calculate_mean(df, label):\n",
+        "    median_label = df.\n",
+        " "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
