--- a/refactoring_example.ipynb
+++ b/refactoring_example.ipynb
@@ -6,7 +6,7 @@
       "name": "refactoring-example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMUf0PeOPbc9Ng7CmJFqI+3",
+      "authorship_tag": "ABX9TyMzCatlWgggHeA/RTEYbsfv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "xPcqvKReDihB",
         "colab_type": "code",
-        "outputId": "c848ebb2-b1e5-421b-a67c-a436355528ac",
+        "outputId": "18ba68ad-76b4-43d1-c033-5e4f157339bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 151
@@ -57,7 +57,7 @@
         "\n",
         "print(df.head())"
       ],
-      "execution_count": 75,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "_4kEtl9yErmH",
         "colab_type": "code",
-        "outputId": "e3f89d2d-a10b-4e17-9aa1-7b7e03b8919d",
+        "outputId": "856e6139-4a98-4407-9482-87bc0b93a53f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
@@ -108,7 +108,7 @@
         "\n",
         "print(new_df.columns)"
       ],
-      "execution_count": 76,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "KIXzKymPFRIG",
         "colab_type": "code",
-        "outputId": "3af703e6-2414-4e80-e93b-8bcab8eb78f5",
+        "outputId": "bf99f120-b226-4557-88f9-6ee29b38d2b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
@@ -156,7 +156,7 @@
         "\n",
         "print(df.columns)\n"
       ],
-      "execution_count": 77,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,13 +217,14 @@
       "metadata": {
         "id": "xNfDR2ADJL1t",
         "colab_type": "code",
-        "outputId": "42ea322f-be33-45ec-86ae-0bb31f0aa611",
+        "outputId": "ea4bdc40-277e-4649-948e-d7fc12541d8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 54
         }
       },
       "source": [
+        "'''\n",
         "median_alcohol = df.alcohol.median()\n",
         "for i, alcohol in enumerate(df.alcohol):\n",
         "    if alcohol >= median_alcohol:\n",
@@ -231,24 +232,22 @@
         "    else:\n",
         "        df.loc[i, 'alcohol'] = \"low\"    \n",
         "\n",
-        "df.groupby('alcohol').quality.mean()"
+        "df.groupby('alcohol').quality.mean()\n",
+        "'''"
       ],
-      "execution_count": 79,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "alcohol\n",
-              "high    5.958904\n",
-              "low     5.310302\n",
-              "Name: quality, dtype: float64"
+              "'\\nmedian_alcohol = df.alcohol.median()\\nfor i, alcohol in enumerate(df.alcohol):\\n    if alcohol >= median_alcohol:\\n        df.loc[i, \\'alcohol\\'] = \"high\"\\n    else:\\n        df.loc[i, \\'alcohol\\'] = \"low\"    \\n\\ndf.groupby(\\'alcohol\\').quality.mean()\\n'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 41
         }
       ]
     },
@@ -259,35 +258,34 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 54
         },
-        "outputId": "69021887-25f9-4895-c5ac-17f806a03b35"
+        "outputId": "ba7472e7-8e10-495a-d436-ae88c2223473"
       },
       "source": [
+        "'''\n",
         "median_pH = df.pH.median()\n",
         "for i, pH in enumerate(df.pH):\n",
         "    if pH >= median_pH:\n",
         "        df.loc[i, 'pH'] = 'high'\n",
         "    else:\n",
         "        df.loc[i, 'pH'] = 'low'\n",
-        "df.groupby('pH').quality.mean()"
+        "df.groupby('pH').quality.mean()\n",
+        "'''"
       ],
-      "execution_count": 80,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "pH\n",
-              "high    5.598039\n",
-              "low     5.675607\n",
-              "Name: quality, dtype: float64"
+              "\"\\nmedian_pH = df.pH.median()\\nfor i, pH in enumerate(df.pH):\\n    if pH >= median_pH:\\n        df.loc[i, 'pH'] = 'high'\\n    else:\\n        df.loc[i, 'pH'] = 'low'\\ndf.groupby('pH').quality.mean()\\n\""
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 42
         }
       ]
     },
@@ -306,15 +304,90 @@
       "metadata": {
         "id": "xFOFizsE-kRe",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 941
+        },
+        "outputId": "ebb94051-79ce-43f0-b107-c4d6f4b41fce"
       },
       "source": [
-        "def calculate_mean(df, label):\n",
-        "    median_label = df.\n",
-        " "
+        "def calculate_mean(df, column_name):\n",
+        "    median = df[column_name].median()\n",
+        "    for i, column_value in enumerate(df[column_name]):\n",
+        "        if column_value >= median:\n",
+        "            df.loc[i, column_name] = \"high\"\n",
+        "        else:\n",
+        "            df.loc[i, column_name] = \"low\"\n",
+        "\n",
+        "\n",
+        "for feature in df.columns[:-1]:\n",
+        "    calculate_mean(df, feature)\n",
+        "    print(df.groupby(feature).quality.mean(), \"\\n\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fixed_acidity\n",
+            "high    5.726061\n",
+            "low     5.540052\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "volatile_acidity\n",
+            "high    5.392157\n",
+            "low     5.890166\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "citric_acid\n",
+            "high    5.822360\n",
+            "low     5.447103\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "residual_sugar\n",
+            "high    5.665880\n",
+            "low     5.602394\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "chlorides\n",
+            "high    5.507194\n",
+            "low     5.776471\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "free_sulfur_dioxide\n",
+            "high    5.595268\n",
+            "low     5.677136\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "total_sulfur_dioxide\n",
+            "high    5.522981\n",
+            "low     5.750630\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "density\n",
+            "high    5.540574\n",
+            "low     5.731830\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "pH\n",
+            "high    5.598039\n",
+            "low     5.675607\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "sulphates\n",
+            "high    5.898917\n",
+            "low     5.351562\n",
+            "Name: quality, dtype: float64 \n",
+            "\n",
+            "alcohol\n",
+            "high    5.958904\n",
+            "low     5.310302\n",
+            "Name: quality, dtype: float64 \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
