--- a/gaussian_example.ipynb
+++ b/gaussian_example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "gaussian-example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTUUQRg5wVEkDjtYpEZpU/",
+      "authorship_tag": "ABX9TyPbntpkAcr0fZS/I8/pUF1m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,8 +41,39 @@
         "    visiualizing gaussian distribution\n",
         "\n",
         "    Attributes:\n",
+        "        mean (float)\n",
+        "        stdev (float)\n",
+        "        data_list (list of floats)\n",
+        "    \"\"\"\n",
+        "    def __init__(self, mu = 0, sigma = 1):\n",
         "        \n",
-        "    \"\"\""
+        "        self.mean = mu\n",
+        "        self.stdev = sigma\n",
+        "        self.data = []\n",
+        "\n",
+        "    def calculate_mean(self):\n",
+        "        \"\"\"\n",
+        "        method to calculate mean of the data\n",
+        "\n",
+        "        Args: None\n",
+        "\n",
+        "        Returns: mean of the data set\n",
+        "        \"\"\"\n",
+        "        pass\n",
+        "\n",
+        "    def calculate_stdev(self, sample=True):\n",
+        "        \"\"\"\n",
+        "        method to calculate stand deviation\n",
+        "\n",
+        "        Args:\n",
+        "            sample: bool - whether data represents a sample or population\n",
+        "\n",
+        "        Returns:\n",
+        "            float: standard deviation of data set    \n",
+        "        \"\"\"    \n",
+        "        pass\n",
+        "\n",
+        "    def read"
       ],
       "execution_count": null,
       "outputs": []
