--- a/gaussian_example.ipynb
+++ b/gaussian_example.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "gaussian-example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbntpkAcr0fZS/I8/pUF1m",
+      "mount_file_id": "197etfE1bMCP1Kq8BE1LBicfInRClK4PC",
+      "authorship_tag": "ABX9TyNobpMOtxiDWPjcfbqO4UyH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,10 +74,196 @@
         "        \"\"\"    \n",
         "        pass\n",
         "\n",
-        "    def read"
+        "    def read_data_file(self, file_name, sample=True):\n",
+        "        \"\"\"\n",
+        "        method to read data from a text file\n",
+        "\n",
+        "        Args:\n",
+        "            file_name - string\n",
+        "        \n",
+        "        Returns:\n",
+        "            None\n",
+        "        \"\"\"\n",
+        "        with open(file_name) as file:\n",
+        "            data_list = []\n",
+        "            line = file.readline()\n",
+        "            while line:\n",
+        "                data_list.append(int(line))\n",
+        "                line = file.readline()\n",
+        "        file.close()\n",
+        "\n",
+        "    def plot_histogram(self):\n",
+        "        \"\"\"\n",
+        "        method to output histogram\n",
+        "\n",
+        "        Args: None\n",
+        "\n",
+        "        Returns: None\n",
+        "        \"\"\"\n",
+        "\n",
+        "    def pdf(self, x):\n",
+        "        \"\"\"\n",
+        "        probablity density function\n",
+        "\n",
+        "        Args: \n",
+        "            x - float\n",
+        "\n",
+        "        Returns:\n",
+        "            float    \n",
+        "        \"\"\"\n",
+        "        pass\n",
+        "\n",
+        "    def plot_histogram_pdf(self, n_spaces = 50):\n",
+        "        \"\"\"\n",
+        "        method to plot normalised histogram\n",
+        "\n",
+        "        Args: \n",
+        "            n_spaces - int - number of data points\n",
+        "\n",
+        "        Returns:\n",
+        "            list: x values for the pdf plot\n",
+        "            list: y values for the pdf plot\n",
+        "        \"\"\"\n",
+        "\n",
+        "        mu = self.mean \n",
+        "        sigma = self.stdev\n",
+        "        min_range = min(self.data)\n",
+        "        max_range = max(self.data)\n",
+        "\n",
+        "        # calculates interval b/w x values\n",
+        "        interval = 1.0 * (max_range - min_range) / n_spaces\n",
+        "\n",
+        "        x = []\n",
+        "        y = []\n",
+        "\n",
+        "        # calculate x values to visualize\n",
+        "        for i in range(n_spaces):\n",
+        "            tmp = min_range + interval * i\n",
+        "            x.append(tmp)\n",
+        "            y.append(self.pdf(tmp))\n",
+        "\n",
+        "        #make the plots\n",
+        "        fig, axes = plt.subplots(2, sharex=True)\n",
+        "        fig.subplots_adjust(hspace=.5)\n",
+        "        axes[0].hist(self.data, density=True)\n",
+        "        axes[0].set_title('Normed Histogram of Data')\n",
+        "        axes[0].set_ylabel('Density')\n",
+        "\n",
+        "        axes[1].plot(x, y)\n",
+        "        axes[1].set_title('Normal Distribution for \\n Sample Mean and Sample Standard Deviation')\n",
+        "        axes[0].set_ylabel('Density')\n",
+        "        plt.show()\n",
+        "\n",
+        "        return x, y\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RMvch6x9lqSn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 555
+        },
+        "outputId": "da03c178-6a59-4ab1-9913-85779ce278d7"
+      },
+      "source": [
+        "# Unit tests for checking the solution\n",
+        "import unittest\n",
+        "\n",
+        "class TestGaussianClass(unittest.TestCase):\n",
+        "    def setUp(self):\n",
+        "        self.gaussian = Gaussian(25, 2)\n",
+        "\n",
+        "    def test_initialization(self): \n",
+        "        self.assertEqual(self.gaussian.mean, 25, 'incorrect mean')\n",
+        "        self.assertEqual(self.gaussian.stdev, 2, 'incorrect standard deviation')\n",
+        "\n",
+        "    def test_pdf(self):\n",
+        "        self.assertEqual(round(self.gaussian.pdf(25), 5), 0.19947,\\\n",
+        "         'pdf function does not give expected result') \n",
+        "\n",
+        "    def test_meancalculation(self):\n",
+        "        self.gaussian.read_data_file('numbers.txt', True)\n",
+        "        self.assertEqual(self.gaussian.calculate_mean(),\\\n",
+        "         sum(self.gaussian.data) / float(len(self.gaussian.data)), 'calculated mean not as expected')\n",
+        "\n",
+        "    def test_stdevcalculation(self):\n",
+        "        self.gaussian.read_data_file('numbers.txt', True)\n",
+        "        self.assertEqual(round(self.gaussian.stdev, 2), 92.87, 'sample standard deviation incorrect')\n",
+        "        self.gaussian.read_data_file('numbers.txt', False)\n",
+        "        self.assertEqual(round(self.gaussian.stdev, 2), 88.55, 'population standard deviation incorrect')\n",
+        "                \n",
+        "tests = TestGaussianClass()\n",
+        "\n",
+        "tests_loaded = unittest.TestLoader().loadTestsFromModule(tests)\n",
+        "\n",
+        "unittest.TextTestRunner().run(tests_loaded)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".EEF\n",
+            "======================================================================\n",
+            "ERROR: test_meancalculation (__main__.TestGaussianClass)\n",
+            "----------------------------------------------------------------------\n",
+            "Traceback (most recent call last):\n",
+            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 17, in test_meancalculation\n",
+            "    self.assertEqual(self.gaussian.calculate_mean(),         sum(self.gaussian.data) / float(len(self.gaussian.data)), 'calculated mean not as expected')\n",
+            "ZeroDivisionError: float division by zero\n",
+            "\n",
+            "======================================================================\n",
+            "ERROR: test_pdf (__main__.TestGaussianClass)\n",
+            "----------------------------------------------------------------------\n",
+            "Traceback (most recent call last):\n",
+            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 13, in test_pdf\n",
+            "    self.assertEqual(round(self.gaussian.pdf(25), 5), 0.19947,         'pdf function does not give expected result')\n",
+            "TypeError: type NoneType doesn't define __round__ method\n",
+            "\n",
+            "======================================================================\n",
+            "FAIL: test_stdevcalculation (__main__.TestGaussianClass)\n",
+            "----------------------------------------------------------------------\n",
+            "Traceback (most recent call last):\n",
+            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 21, in test_stdevcalculation\n",
+            "    self.assertEqual(round(self.gaussian.stdev, 2), 92.87, 'sample standard deviation incorrect')\n",
+            "AssertionError: 2 != 92.87 : sample standard deviation incorrect\n",
+            "\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 4 tests in 0.010s\n",
+            "\n",
+            "FAILED (failures=1, errors=2)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<unittest.runner.TextTestResult run=4 errors=2 failures=1>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sBT4HFM_mZqO",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
