--- a/gaussian_example.ipynb
+++ b/gaussian_example.ipynb
@@ -6,7 +6,7 @@
       "name": "gaussian-example.ipynb",
       "provenance": [],
       "mount_file_id": "197etfE1bMCP1Kq8BE1LBicfInRClK4PC",
-      "authorship_tag": "ABX9TyNobpMOtxiDWPjcfbqO4UyH",
+      "authorship_tag": "ABX9TyPMnkq2uL9skORgL9Tl3JEN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,9 @@
         "\n",
         "        Returns: mean of the data set\n",
         "        \"\"\"\n",
-        "        pass\n",
+        "        avg = 1.0 * sum(self.data) / len(self.data)\n",
+        "        self.mean = avg\n",
+        "        return self.mean\n",
         "\n",
         "    def calculate_stdev(self, sample=True):\n",
         "        \"\"\"\n",
@@ -72,7 +74,20 @@
         "        Returns:\n",
         "            float: standard deviation of data set    \n",
         "        \"\"\"    \n",
-        "        pass\n",
+        "        if sample:\n",
+        "            n = len(self.data) - 1\n",
+        "        else:\n",
+        "            n = len(self.data)\n",
+        "        mean = self.mean\n",
+        "        sigma = 0\n",
+        "\n",
+        "        for d in self.data:\n",
+        "            sigma += (de - mean) ** 2\n",
+        "        \n",
+        "        sigma = math.sqrt(sigma / n)\n",
+        "        self.stdev = sigma\n",
+        "        \n",
+        "        return self.stdev\n",
         "\n",
         "    def read_data_file(self, file_name, sample=True):\n",
         "        \"\"\"\n",
@@ -92,6 +107,10 @@
         "                line = file.readline()\n",
         "        file.close()\n",
         "\n",
+        "        self.data = data_list\n",
+        "        self.mean = self.calculate_mean()\n",
+        "        self.stdev = self.calculate_stdev(sample)\n",
+        "\n",
         "    def plot_histogram(self):\n",
         "        \"\"\"\n",
         "        method to output histogram\n",
@@ -100,6 +119,10 @@
         "\n",
         "        Returns: None\n",
         "        \"\"\"\n",
+        "        plt.hist(self.data)\n",
+        "        plt.title(\"histogram of data\")\n",
+        "        plt.xlabel(\"data\")\n",
+        "        plt.ylabel(\"count\")\n",
         "\n",
         "    def pdf(self, x):\n",
         "        \"\"\"\n",
@@ -111,7 +134,7 @@
         "        Returns:\n",
         "            float    \n",
         "        \"\"\"\n",
-        "        pass\n",
+        "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)\n",
         "\n",
         "    def plot_histogram_pdf(self, n_spaces = 50):\n",
         "        \"\"\"\n",
@@ -157,7 +180,7 @@
         "        return x, y\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -167,9 +190,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 555
+          "height": 466
         },
-        "outputId": "da03c178-6a59-4ab1-9913-85779ce278d7"
+        "outputId": "5255d310-6cae-4a03-84bc-5e428002882d"
       },
       "source": [
         "# Unit tests for checking the solution\n",
@@ -204,40 +227,36 @@
         "\n",
         "unittest.TextTestRunner().run(tests_loaded)"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            ".EEF\n",
+            ".E.E\n",
             "======================================================================\n",
             "ERROR: test_meancalculation (__main__.TestGaussianClass)\n",
             "----------------------------------------------------------------------\n",
             "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 17, in test_meancalculation\n",
-            "    self.assertEqual(self.gaussian.calculate_mean(),         sum(self.gaussian.data) / float(len(self.gaussian.data)), 'calculated mean not as expected')\n",
-            "ZeroDivisionError: float division by zero\n",
+            "  File \"<ipython-input-5-ee1bdbdb7824>\", line 16, in test_meancalculation\n",
+            "    self.gaussian.read_data_file('numbers.txt', True)\n",
+            "  File \"<ipython-input-4-6a8cebae6294>\", line 67, in read_data_file\n",
+            "    with open(file_name) as file:\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: 'numbers.txt'\n",
             "\n",
             "======================================================================\n",
-            "ERROR: test_pdf (__main__.TestGaussianClass)\n",
+            "ERROR: test_stdevcalculation (__main__.TestGaussianClass)\n",
             "----------------------------------------------------------------------\n",
             "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 13, in test_pdf\n",
-            "    self.assertEqual(round(self.gaussian.pdf(25), 5), 0.19947,         'pdf function does not give expected result')\n",
-            "TypeError: type NoneType doesn't define __round__ method\n",
-            "\n",
-            "======================================================================\n",
-            "FAIL: test_stdevcalculation (__main__.TestGaussianClass)\n",
-            "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-6-ee1bdbdb7824>\", line 21, in test_stdevcalculation\n",
-            "    self.assertEqual(round(self.gaussian.stdev, 2), 92.87, 'sample standard deviation incorrect')\n",
-            "AssertionError: 2 != 92.87 : sample standard deviation incorrect\n",
+            "  File \"<ipython-input-5-ee1bdbdb7824>\", line 20, in test_stdevcalculation\n",
+            "    self.gaussian.read_data_file('numbers.txt', True)\n",
+            "  File \"<ipython-input-4-6a8cebae6294>\", line 67, in read_data_file\n",
+            "    with open(file_name) as file:\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: 'numbers.txt'\n",
             "\n",
             "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.010s\n",
+            "Ran 4 tests in 0.004s\n",
             "\n",
-            "FAILED (failures=1, errors=2)\n"
+            "FAILED (errors=2)\n"
           ],
           "name": "stderr"
         },
@@ -245,13 +264,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.runner.TextTestResult run=4 errors=2 failures=1>"
+              "<unittest.runner.TextTestResult run=4 errors=2 failures=0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
